minor changes added

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-/storage/views
+/bootstrap/cache
+/storage/framework/cache
+/storage/framework/sessions
+/storage/framework/views
 /storage/logs
 /storage/framework/sessions/
 /backups
