--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,33 @@
-/booststrap/cache/*
-/storage/*
-/backups
-/public/uploads
-/node_modules
-/vendor
-idea/
-.idea
-.idea/*
-.env
-.env.backup
-.phpunit.result.cache
+/vendor/
+/node_modules/
+/public/hot
+/public/storage
+/storage/*.key
+/.env
+/.env.backup
+/.env.testing
 Homestead.json
 Homestead.yaml
-npm-debug.log
+/.vagrant
+/phpunit.xml
+/_ide_helper.php
+/_ide_helper_models.php
+/.phpstorm.meta.php
+/config.php
+composer.lock
 yarn-error.log
+/.buildpath
+/.project
+/.settings
+/.idea
+/.vscode
+.sass-cache/
+.phpunit.result.cache
+.DS_Store
+Thumbs.db
+/coverage
+npm-debug.log
+yarn-debug.log
+yarn.lock
+/public/assets
+/bootstrap/cache/*.php
