--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /node_modules/
 /public/hot
 /public/storage
+/storage/*.key
 /.env
 /.env.backup
 /.env.testing
@@ -32,8 +33,9 @@ yarn.lock
 /bootstrap/cache
 /storage/framework/cache
 /storage/framework/views
-/storage/logs
 /storage/framework/sessions/
+/storage/logs/
 /backups/
 /bootstrap/cache/*.php
 /.gitignore
+
