minor changes added

--- a/src/.env
+++ b/src/.env
@@ -1,7 +1,7 @@
 APP_NAME=""
 APP_ENV=local
 APP_KEY=base64:WrvqXJ+ilWOLItqI7C2N2R2dQkqFAHFYzTrQBBJqtso=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL="http://localhost:8000"
 APP_TIMEZONE="UTC"
 
