minor changes added

--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "spatie/laravel-backup": "^6.15",
         "stripe/stripe-php": "^6.29",
         "twilio/sdk": "^6.1",
-        "unicodeveloper/laravel-paystack": "^1.0"
+        "unicodeveloper/laravel-paystack": "^1.0",
+      "ext-json": "*"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
